@@ -1,3 +1,15 @@
+2007-01-16 Begun work on a new pick API using the mpl event handling
+           frameowrk.  Artists will define their own pick method with
+           a configurable epsilon tolerance and return pick attrs.
+           All artists that meet the tolerance threshold will fire a
+           PickEvent with artist dependent attrs; eg, a Line2D can set
+           the indices attribute that shows the indices into the line
+           that are within epsilon of the pick point.  See
+           examples/pick_event_demo.py.  The implementation of pick
+           for the remaining Artists remains to be done, but the core
+           infrastructure at the level of event handling is in place
+           with a proof-of-concept implementation for Line2D - JDH
+
 2007-01-16 src/_image.cpp: update to use Py_ssize_t (for 64-bit systems).
            Use return value of fread() to prevent warning messages - SC.
 
